src/app/online-coursework/online-coursework.component.css
.searchHeader{
    font-family: 'Moon-Bold';
    color:darkblue;
    align-self: center
}
.searchbutton{
    float: right;
}

/*.searchforcourses{
    max-width: 42%;
    max-height: 42%;
    float: right;
    margin-bottom: 12%;
    margin-right: 0;
}*/

.container-padding50 {
    position: relative;              
    padding-top: 50px;
    height: 80px;                    
  }
  
  .container-textinput {
    position: absolute;              
    left: 50%;
    transform: translateX(-50%);     
    text-align: center;
    width: 80%;
    padding: 20px;
    font-size: 16px;
    font-family: 'Moon-Bold';
    border: none;
    border-bottom: 2px solid black;
  }

  /* Three image containers (use 25% for four, and 50% for two, etc) */
.column {
    float: left;
    width: 33.33%;
    padding: 5px;
    
  }
  
  /* Clear floats after image containers */
  .row::after {
    content: "";
    clear: both;
    display: table;
  }

  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 500px) {
    .column {
      width: 100%;
    }
  }

  .Thumbnail{
    float: center;
    margin-left: 20%;
  }

